--- a/index.html
+++ b/index.html
@@ -29,27 +29,26 @@
               >Web<span class="header-logo-span">Studio</span></a
             >
           <ul class="header-menu list"></ul>
-
-          <li>
-            <a class="header-menu-link link" href="./index.html">Studio</a>
+          <li class="header-menu-item link">
+            <a class="header-menu-link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a class="header-menu-link link" href="./portfolio.html"
+          <li  class="header-menu-item link">
+            <a class="header-menu-link" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
-          <li><a class="header-menu-link link" href="">Contacts</a></li>
+          <li  class="header-menu-item link"><a class="header-menu-link" href="">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="header-address">
         <ul class="header-address-list list">
-          <li>
+          <li  class="header-menu-item link">
             <a href="mailto:info@devstudio.com" class="header-address-item link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="header-menu-item link">
             <a href="tel:+110001111111" class="header-address-item link"
               >+11 (000) 111-11-11</a
             >
