--- a/portfolio.html
+++ b/portfolio.html
@@ -45,12 +45,12 @@
 
       <address class="header-address">
         <ul class="header-address-list list">
-          <li class="header-menu-item link">
+          <li class="header-menu-item">
             <a href="mailto:info@devstudio.com" class="header-address-item link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-menu-item link">
+          <li class="header-menu-item">
             <a href="tel:+110001111111" class="header-address-item link"
               >+11 (000) 111-11-11</a
             >
